HTML boilerplate written Writing CSS

--- a/index.html
+++ b/index.html
@@ -8,13 +8,31 @@
 </head>
 <body>
     
-    <section>
-        <div>
+    <section class="s1">
+        <div class="main-container">
             <h1>Greetings Hooman</h1>
             <p>First Line</p>
             <a href="#">links eventually</a>
         </div>
     </section>
-    
+
+    <section class="s2">
+        <div class="main-container">
+            About
+        </div>
+    </section>
+
+    <section class="s1">
+        <div class="main-container">
+            Portfolio
+        </div>
+    </section>
+
+    <section class="s2">
+        <div class="main-container">
+            Contact
+        </div>
+    </section>
+
 </body>
 </html>
