hammering on sections

--- a/index.html
+++ b/index.html
@@ -47,7 +47,16 @@
                 </div>
                 
                 <div class="right-column">
-                    Right column
+                    <div id="preview-shadow">
+                        <div id="preview">
+                            <div id="corner-tl" class="corner"></div>
+                            <div id="corner-tr" class="corner"></div>
+                            <h3>what I do</h3>
+                            <p>Software Engineer</p>
+                            <div id="corner-bl" class="corner"></div>
+                            <div id="corner-br" class="corner"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
