--- a/index.html
+++ b/index.html
@@ -176,7 +176,25 @@
 
     <section class="s2">
         <div class="main-container">
-            Contact
+            
+            <h3 style="text-align: center;">Send me a note</h3>
+            
+            <form id="contact-form">
+                <label>Name:</label>
+                <input class="input-field" type="text" name="name">
+
+                <label>Subject:</label>
+                <input class="input-field" type="text" name="subject">
+
+                <label>Email:</label>
+                <input class="input-field" type="text" name="email">
+
+                <label>Note:</label>
+                <textarea name="note" class="input-field"></textarea>
+
+                <input id="submit-btn" type="submit" value="Send">
+            </form>
+
         </div>
     </section>
 
