--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
 
                 <div class="left-column">
-                    <img id="profile_pic" src="images/ashr7.JPG">
+                    <img id="profile_pic" src="#">
                     <h5 style="text-align: center; line-height: 0">Change Page Theme</h5>
                     
                     <div id="theme-options-wrapper">
