--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <div id="dot-3" class="browser-dot"></div>
                     </div>
                     <ul id="navigation">
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="mailto:asherferri85@gmail.com">Contact AsheR</a></li>
                     </ul>
                 </div>
 
